<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable name="ringName" type="cabinetcep.com.meditation.RingName" />
        <variable name="durationName" type="cabinetcep.com.meditation.DurationName" />
    </data>

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/candle3">

        <TextView
                android:text="@string/preferences_choose_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" style="@style/InverseStyle"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <Spinner
                android:id="@+id/ring_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/ring_textView"
                app:layout_constraintEnd_toStartOf="@+id/ring_button"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:visibility="visible" android:background="@color/colorPrimary"
                android:popupBackground="@color/colorPrimary"
                tools:entries="@array/sounds_array"
        />
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/time_spinner"
                app:layout_constraintStart_toEndOf="@+id/ring_textView"
                android:layout_marginStart="8dp"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/ring_button"
                android:layout_marginEnd="8dp" android:background="@color/colorPrimary"
                android:popupBackground="@color/colorPrimary"
                tools:entries="@array/duration_array"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ring_spinner"/>
        <TextView
                android:text="@string/ring_select_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ring_textView"
                style="@style/InverseStyle"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
        <TextView
                android:text="@string/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_textView"
                style="@style/InverseStyle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ring_textView"/>
        <Button
                android:text="@string/ring_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/ring_button"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    </android.support.constraint.ConstraintLayout>
</layout>